# watchcore

./: .gitignore  README.md  pyproject.toml
docs/: observation-schema.md
src/watchcore/: __init__.py  dedup.py  observation.py  query.py  store.py
tests/: test_observation.py  test_query.py
